Agregando angularfire y firestore al proyecto; agregando las variables de entorno que proporciona firbase a enviroment y enviroment.prod; obteniendo informacion en tiempo real y reestructurrandola en el inicio.ts; creando el input en grafica-horizontal.ts y enviando datos desde inicio.html

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -4,7 +4,8 @@
 <div class="row">
     <div class="col">
 
-        <app-grafico-barra-horizontal></app-grafico-barra-horizontal>
+        <!-- mandando los datos al componente graficos-horizontales -->
+        <app-grafico-barra-horizontal [results]="juegos"></app-grafico-barra-horizontal>
 
     </div>
 </div>
